# databento-es-options

./: -files  findstr fred_settings  .env.example  .gitignore  LICENSE  MIGRATION_SUMMARY_2025-11-06.md  QUICK_REFERENCE.md  README.md  check_sr3_data.py  check_ub_zn_data.py  compare_sr3_ranks.py  orchestrator.py  pyproject.toml  requirements.txt  verify_fred_additions.py
archive/: DATABENTO_ISSUE.md  DATA_FOLDER_STRUCTURE.md  MIGRATION_SUMMARY_2025-11-06.md  PROJECT_STRUCTURE.md  RUNBOOK.md  WRAPPER_GUIDE.md  debug_bbo_time_window.py  test_5min_cost.py  test_symbol_resolution.py
archive/scripts/: check_and_clean_definitions.py  check_definitions.py  check_sr3_data.py  cleanup_orphaned_definitions.py
config/: schema_registry.yml  settings.yml
configs/: canonical_series.yaml  contracts.yaml  download_universe.yaml  fred_series.yaml  fred_settings.yaml  rates_dv01.yaml  universe.yaml
db/migrations/: 0001_core.sql  1000_es_options_mdp3.sql  1001_es_futures_mdp3.sql  (+8 more)
docs/: DATABENTO_DEFINITIONS.md  DATA_FOLDER_STRUCTURE.md  DATA_SOURCES_SUMMARY.md  INSTRUMENT_DEFINITIONS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  READ_ONLY_DATABASE_ACCESS.md  ROLL_STRATEGY_GUIDE.md  RUNBOOK.md  SHARING_DATA_ACROSS_PROJECTS.md  TECHNICAL_REFERENCE.md  TROUBLESHOOTING.md  VIX3M_IMPLEMENTATION_SUMMARY.md  WRAPPER_GUIDE.md
notebooks/: download_bbo_close.ipynb  explore_databento.ipynb
pipelines/: common.py  loader.py  registry.py  validators.py
scripts/: README.md  organize_raw_folder.py  transform_and_ingest_all.py  verify_and_complete_ingest.py
src/: __init__.py
(+63 files in other folders)
